# Cornea

./: .env.example  .gitignore  .prettierignore  LICENSE  README.md  package.json  pnpm-lock.yaml  svelte.config.js  vite.config.ts
api/: analytics.py  coach.py  currency_exchange_api.py  database.py  main.py  pulse.py  pulse_data.py  pyproject.toml  requirements.txt  seed.py  test_db.py
api/utils/: functions.py  mock_jobs.json  prompts.py  upwork.py
src/: app.html  nprogress.css
src/lib/components/: Navbar.svelte  Sidebar.svelte
src/lib/components/ui/: NeoButton.svelte  NeoCard.svelte
src/lib/hooks/: hooks.client.ts
src/lib/stores/: exchange.ts
src/routes/: +layout.svelte  +page.svelte  layout.css
src/routes/(app)/: +layout.svelte
src/routes/(app)/analytics/: +page.svelte
src/routes/(app)/blame/: +page.svelte
src/routes/(app)/coach/: +page.svelte
src/routes/(app)/diff/: +page.svelte
src/routes/(app)/log/: +page.svelte
src/routes/(app)/merge/: +page.svelte
src/routes/(app)/settings/: +page.svelte
src/routes/(app)/trends/: +page.svelte
src/routes/auth/: +page.svelte
